--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -19,7 +19,7 @@ jobs:
     
     strategy:
       matrix:
-        python-version: ['3.8', '3.x']
+        python-version: ['3.8']
 
     env:
       QT_QPA_PLATFORM: "offscreen"
